--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -7,7 +7,7 @@ one:
   email: MyString
   name: MyString
   description: MyString
-  picfile: 
+  picfile: MyString
 
 two:
   latitude: 9.99
@@ -16,4 +16,4 @@ two:
   email: MyString
   name: MyString
   description: MyString
-  picfile: 
+  picfile: MyString
